WordBreak BFS